<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:iconTint="@color/rokid_green"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export_vcard"
        android:title="@string/action_export_vcard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_csv"
        android:title="@string/action_export_csv"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />

</menu>
